<resources>
    <string name="app_name">FRECX</string>

    <string-array name="country_codes">
        <item>KE +254</item>
        <item>+1,</item>
        <item>+238,</item>
        <item>+242,</item>
        <item>+243,</item>
        <item>+231,</item>
        <item>+218,</item>

    </string-array>
    <string name="new_password">Your new password must be different from previous used password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="enter_verification_code_sent_to_your_email_address">Enter verification code sent to your email
        address
    </string>
    <string name="get_started">get_started</string>
    <string name="welcome_back">WELCOME BACK!!</string>
    <string name="username_or_email">Username or Email</string>
    <string name="pass">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="new_to_frecx">New to FRECX?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="email_address">Email address</string>
    <string name="password_account_creation">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="signup_with_google">SignUp with Google</string>
    <string name="phone_number">Phone Number</string>
    <string name="do_not_worry_it_happens_to_the_best_of_us">Do not worry it happens to the best of us</string>
    <string name="use_email_address">Enter your Email Address</string>
    <string name="recover_password">RECOVER PASSWORD</string>
    <string name="don_t_worry_happens_to_the_best_of_us">Don\'t worry, happens to the best of us</string>
    <string name="enter_linked_email_address">Enter linked email address</string>
    <string name="use_phone_number">Enter Your Registered Email Address</string>
    <string name="send_code">Send Code</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="verification">VERIFICATION</string>
    <string name="email_address_verifivation">Email address</string>
    <string name="send_to">Send to</string>
    <string name="instead">instead</string>
    <string name="resend_code">Resend code</string>
    <string name="enter_verification">Enter verification</string>
    <string name="enter_registered_phone_number">Enter Registered Phone Number</string>
    <string name="user_phone_number">User phone Number</string>
</resources>