<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            tools:context=".ui.View.regscreens.RecoverPassPhoneFragment"
>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        >


        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/logo"

        >
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/splashicon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar"
             />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recover_password"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/happens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/don_t_worry_happens_to_the_best_of_us"
            app:layout_constraintTop_toBottomOf="@id/text"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordRecovery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                app:layout_constraintTop_toBottomOf="@id/happens"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userEmailToRecoverPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_number"
            android:background="@drawable/input"

            />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/usePhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_registered_phone_number"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/passwordRecovery"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp" />

        <Button
            android:id="@+id/sendCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:text="@string/send_code"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/custom_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usePhoneNumber" />

        <TextView
                android:id="@+id/userEmailInstead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_email_address"
                android:textColor="#6349a3"
                android:clickable="true"
                android:onClick="onClick"
                android:textSize="12sp"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@id/sendCode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                 />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>