<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            tools:context=".ui.View.regscreens.RecoverPassEmailFragment"
>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        >


        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/logo"

        >
        </androidx.appcompat.widget.Toolbar>

        <ImageView
                android:id="@+id/logo"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/splashicon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolBar"
        />

        <TextView
            android:id="@+id/recoverPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/recover_password"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="12sp"
            android:text="@string/do_not_worry_it_happens_to_the_best_of_us"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recoverPassword" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailRecoveryLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/enter_linked_email_address"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text2">

            <com.google.android.material.textfield.TextInputEditText
                android:maxLength="9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:background="@drawable/input"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
                android:id="@+id/usePhoneNumberInstead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_phone_number"
                android:onClick="onClick"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailRecoveryLayout" android:focusable="true"/>


        <Button
                android:id="@+id/sendCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:text="@string/send_code"
                android:textStyle="bold"
                android:background="@drawable/custom_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/usePhoneNumberInstead" />


        <TextView
                android:id="@+id/userPhoneNumberInstead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_phone_number"
                android:textColor="#6349a3"
                android:clickable="true"
                android:onClick="onClick"
                android:textSize="12sp"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@id/sendCode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
        />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>