<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            tools:context=".ui.View.regscreens.PhoneVerification"
>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">


        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/logo"

        >
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:src="@drawable/splashicon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification"
            android:textSize="25sp"
            android:layout_marginTop="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/words1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_verification_code_sent_to_your_email_address"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/verification"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:gravity="center"
            android:layout_marginTop="70dp"
            android:weightSum="4"
            app:layout_constraintTop_toBottomOf="@+id/words1">


            <EditText
                android:id="@+id/otp1"
                android:layout_width="50dp"
                android:layout_height="55dp"
                android:background="@drawable/input"
                android:layout_gravity="center"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/otp2"
                android:layout_width="50dp"
                android:layout_height="55dp"
                android:background="@drawable/input"
                android:layout_gravity="center"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/otp3"
                android:layout_width="50dp"
                android:layout_height="55dp"
                android:background="@drawable/input"
                android:layout_gravity="center"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/otp4"
                android:layout_width="50dp"
                android:layout_height="55dp"
                android:background="@drawable/input"
                android:layout_gravity="center"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/resendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_code"
            android:textColor="#6349a3"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear" />


        <TextView
                android:id="@+id/sendTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_to"
            android:layout_marginTop="100dp"
            android:textColor="@color/white"
            android:layout_marginStart="100dp"
            app:layout_constraintTop_toBottomOf="@id/resendCode"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
                android:id="@+id/emailClickableText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address_verifivation"
                android:onClick="onClick"
                android:textStyle="italic"
                android:clickable="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="100dp"
                app:layout_constraintStart_toEndOf="@id/sendTo"
                android:textColor="#6349a3"
                app:layout_constraintTop_toBottomOf="@id/resendCode"
                 android:focusable="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instead"
            android:layout_marginTop="100dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/resendCode"
            app:layout_constraintStart_toEndOf="@id/emailClickableText" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>